# simpledag

./: LICENSE  pyproject.toml
simpledag/: __init__.py
tests/: test_simpledag.py
