[tool.poetry]
name = "simpledag"
version = "0.1.0"
description = "A simple directed acyclic graph with topological walk."
authors = ["Richard Lupton <richard.lupton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
